--- a/style.css
+++ b/style.css
@@ -10,15 +10,27 @@ body{
 
 .btn{ 
     border-radius: 10px;
-    margin-top: 25%;
-    margin-left: 50%;
+    margin-top: 75px;
+    margin-left: 80px;
+    
     padding: 10px 30px;
     font-size: 16px;
     text-align: center;
     background-color: gray;
+}
+.div1{
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    margin-top: 350px;
+    margin-left: 550px;
+    width: 250px;
+    border: 1px solid black;
+    border-radius: 10px;
 
+}
+h4{
+    color: blue;
     
-    
-
-
 }
